--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
+    "homepage": "https://ankit-kumar-dwivedi.github.io/ActorQuiz",
   "name": "app1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
@@ -10,6 +12,8 @@
     "underscore": "^1.9.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
