--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "homepage": "https://ankit-kumar-dwivedi.github.io/ActorQuiz",
+  "homepage": "https://ankit-kumar-dwivedi.github.io/ActorQuiz",
   "name": "app1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "gh-pages": "^1.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.1.3",
     "underscore": "^1.9.1"
   },
   "scripts": {
@@ -18,5 +18,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
